# gen-openapi

./: .gitignore  .pre-commit-config.yaml  README.md  composer.json  doctrine.py  main.php  main.py  pyproject.toml  test.php  test.py  test_main.py  vercel.json
.github/workflows/: build.yaml
api/: index.php  main.php  test.php
snapshots/: snap_test_main.py
tests/: MainTest.php
