[tool.poetry]
name = "gen-open"
version = "0.1.0"
description = ""
authors = ["Elliana May <me@mause.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
phply = "^1.2.5"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
